# Kursach

./: CMakeLists.txt  main.cpp
